Fix visibility of dashicons when Vazir font is enabled (#280)

--- a/assets/css/vazir-font.css
+++ b/assets/css/vazir-font.css
@@ -32,7 +32,7 @@ code {
 
 body#tinymce.wp-editor,
 .rtl .editor-styles-wrapper,
-.rtl .edit-post-visual-editor *,
+.rtl .edit-post-visual-editor *:not(.dashicons),
 .rtl .components-notice__content,
 #wpseo_meta *,
 .edit-post-sidebar *,
